--- a/app/templates/items_detail.html
+++ b/app/templates/items_detail.html
@@ -375,7 +375,8 @@
           </div>
 
           <!-- FABs + Counter -->
-          <button type="button" class="air-fab" onclick="history.back()" aria-label="Back"><i class="bi bi-arrow-left"></i></button>
+          <a class="air-fab" href="/" aria-label="Home"><i class="bi bi-arrow-left"></i></a>
+
           <div class="air-fab-right">
             <button type="button" aria-label="Share" class="air-fab" onclick="navigator.share ? navigator.share({url:location.href}) : alert('Copy the link manually');"><i class="bi bi-share"></i></button>
             <button type="button" aria-label="Save" class="air-fab"><i class="bi bi-heart"></i></button>
